--- a/css/style.scss
+++ b/css/style.scss
@@ -358,7 +358,7 @@ $lighterskills: #080e31;
                                     }
                                     p {
                                         // color: white;
-                                        color: $skillses;
+                                        color: $languagewhite;
                                         font-size: 2.5vw;
                                         opacity: .7;
                                         // font-weight: bold;
@@ -385,7 +385,7 @@ $lighterskills: #080e31;
                                     }
                                     p {
                                         color: white;
-                                        color: $skillses;
+                                        color: $languagewhite;
                                         font-size: 2.5vw;
                                         opacity: .7;
                                         font-family: 'Roboto', sans-serif;
@@ -411,7 +411,7 @@ $lighterskills: #080e31;
                                     }
                                     p {
                                         color: white;
-                                        color: $skillses;
+                                        color: $languagewhite;
                                         font-size: 2.5vw;
                                         opacity: .7;
                                         font-family: 'Roboto', sans-serif;
@@ -482,7 +482,7 @@ $lighterskills: #080e31;
                                         }
                                         p {
                                             color: white;
-                                            color: $skillses;
+                                            color: $languagewhite;
                                             font-size: 2.5vw;
                                             opacity: .7;
                                             text-align: center;
@@ -509,7 +509,7 @@ $lighterskills: #080e31;
                                         }
                                         p {
                                             color: white;
-                                            color: $skillses;
+                                            color: $languagewhite;
                                             font-size: 2.5vw;
                                             opacity: .7;
                                             font-family: 'Roboto', sans-serif;
@@ -535,7 +535,7 @@ $lighterskills: #080e31;
                                         }
                                         p {
                                             color: white;
-                                            color: $skillses;
+                                            color: $languagewhite;
                                             font-size: 2.5vw;
                                             opacity: .7;
                                             font-family: 'Roboto', sans-serif;
@@ -604,7 +604,7 @@ $lighterskills: #080e31;
                                     }
                                     p {
                                         color: white;
-                                        color: $skillses;
+                                        color: $languagewhite;
                                         font-size: 2.5vw;
                                         opacity: .7;
                                         font-family: 'Roboto', sans-serif;
@@ -631,7 +631,7 @@ $lighterskills: #080e31;
                                     }
                                     p {
                                         color: white;
-                                        color: $skillses;
+                                        color: $languagewhite;
                                         font-size: 2.5vw;
                                         opacity: .7;
                                         font-family: 'Roboto', sans-serif;
@@ -658,7 +658,7 @@ $lighterskills: #080e31;
                                     }
                                     p {
                                         color: white;
-                                        color: $skillses;
+                                        color: $languagewhite;
                                         font-size: 2.5vw;
                                         opacity: .7;
                                         font-family: 'Roboto', sans-serif;
@@ -725,7 +725,7 @@ $lighterskills: #080e31;
                                         }
                                         p {
                                             color: white;
-                                            color: $skillses;
+                                            color: $languagewhite;
                                             font-size: 2.5vw;
                                             opacity: .7;
                                             font-family: 'Roboto', sans-serif;
@@ -752,7 +752,7 @@ $lighterskills: #080e31;
                                         }
                                         p {
                                             color: white;
-                                            color: $skillses;
+                                            color: $languagewhite;
                                             font-size: 2.5vw;
                                             opacity: .7;
                                             font-family: 'Roboto', sans-serif;
@@ -779,7 +779,7 @@ $lighterskills: #080e31;
                                         }
                                         p {
                                             color: white;
-                                            color: $skillses;
+                                            color: $languagewhite;
                                             font-size: 2.5vw;
                                             opacity: .7;
                                             font-family: 'Roboto', sans-serif;
@@ -844,7 +844,7 @@ $lighterskills: #080e31;
                                         }
                                         p {
                                             color: white;
-                                            color: $skillses;
+                                            color: $languagewhite;
                                             font-size: 2.5vw;
                                             opacity: .7;
                                             font-family: 'Roboto', sans-serif;
@@ -871,7 +871,7 @@ $lighterskills: #080e31;
                                         }
                                         p {
                                             color: white;
-                                            color: $skillses;
+                                            color: $languagewhite;
                                             font-size: 2.5vw;
                                             opacity: .7;
                                             font-family: 'Roboto', sans-serif;
@@ -898,7 +898,7 @@ $lighterskills: #080e31;
                                         }
                                         p {
                                             color: white;
-                                            color: $skillses;
+                                            color: $languagewhite;
                                             font-size: 2.5vw;
                                             opacity: .7;
                                             font-family: 'Roboto', sans-serif;
@@ -961,7 +961,7 @@ $lighterskills: #080e31;
                                         }
                                         p {
                                             color: white;
-                                            color: $skillses;
+                                            color: $languagewhite;
                                             font-size: 2.5vw;
                                             opacity: .7;
                                             font-family: 'Roboto', sans-serif;
@@ -987,7 +987,7 @@ $lighterskills: #080e31;
                                         }
                                         p {
                                             color: white;
-                                            color: $skillses;
+                                            color: $languagewhite;
                                             font-size: 2.5vw;
                                             opacity: .7;
                                             font-family: 'Roboto', sans-serif;
@@ -1014,7 +1014,7 @@ $lighterskills: #080e31;
                                         }
                                         p {
                                             color: white;
-                                            color: $skillses;
+                                            color: $languagewhite;
                                             font-size: 2.5vw;
                                             opacity: .7;
                                             font-family: 'Roboto', sans-serif;
@@ -2252,7 +2252,8 @@ $lighterskills: #080e31;
                             }
                             // Back Button
                             .blogonearrow {
-                                margin: 3vh 0 0 40vw;
+                                margin: 3vh 0 0 44vw;
+                                // background-color: yellow;
                                 button {
                                     display: flex;
                                     justify-content: center;
